:bug: Fix(really really annoying gap) : fix making useless and annoying gap on x-axis
the problem was because of the width I put on body

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
 body {
-  width: 100vw;
   background-color: #0f0f11;
 }
